welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: Missing closing brace `}' assumed here
while(!estFaceMur) {
^